--- a/CSVDynamicParser.Tests/CSVDynamicParser.Tests.csproj
+++ b/CSVDynamicParser.Tests/CSVDynamicParser.Tests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.4.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
@@ -42,11 +45,20 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="Moq, Version=4.14.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.14.1\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.1\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
@@ -91,6 +103,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="ServiceTest\ServiceTest.cs" />
+    <Compile Include="ServiceTest\ServiceTestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -99,6 +113,22 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CSVDynamicParser.Common\CSVDynamicParser.Common.csproj">
+      <Project>{a4d004e7-ab87-4b8b-a74d-4356c4d2f7ae}</Project>
+      <Name>CSVDynamicParser.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CSVDynamicParser.Core\CSVDynamicParser.Core.csproj">
+      <Project>{0171FE4D-CA70-4482-B8A9-99C702B3C9F2}</Project>
+      <Name>CSVDynamicParser.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CSVDynamicParser.Servies\CSVDynamicParser.Servies.csproj">
+      <Project>{02C63531-3671-4C9F-884F-8EF8630799F1}</Project>
+      <Name>CSVDynamicParser.Servies</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CSVDynamicParser.ViewModel\CSVDynamicParser.ViewModel.csproj">
+      <Project>{09CBB0AE-8E71-436C-B64E-76527AD6FC4D}</Project>
+      <Name>CSVDynamicParser.ViewModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CSVDynamicParser\CSVDynamicParser.Web.csproj">
       <Project>{216EE5C4-2B7C-4703-A31D-9767C541AAAA}</Project>
       <Name>CSVDynamicParser.Web</Name>
